--- a/src/index.css
+++ b/src/index.css
@@ -44,9 +44,7 @@ body {
 
 /* ******************************* */
 
-input,
-select,
-option {
+input {
   border: none;
   outline: none;
   font-family: inherit;
@@ -102,14 +100,6 @@ option {
   gap: 1.8rem;
 }
 
-.results {
-  padding: 0 20.8rem;
-  margin-bottom: 1.2rem;
-  font-size: 1.4rem;
-  width: 100%;
-}
-/* *********************** */
-
 .show_filters_box {
   width: 100%;
   display: grid;
@@ -140,6 +130,7 @@ option {
 .show_filters span {
   height: 0.8rem;
   width: 0.8rem;
+  z-index: 2;
 }
 
 .showed_filters {
@@ -163,12 +154,11 @@ option {
   background-color: #f3f3f3;
 }
 
-.background_trans {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100vw;
+.results {
+  padding: 0 20.8rem;
+  margin-bottom: 1.2rem;
+  font-size: 1.4rem;
+  width: 100%;
 }
 
 /* *********************** */
